--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,7 +3,104 @@
 }
 
 .bonadocs__protocol__light {
-  
+}
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+button,
+select,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+input,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  border: none;
+  font-family: "Satoshi-Regular", sans-serif;
+  vertical-align: baseline;
+  text-decoration: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  display: block;
+  color: var(--bonadocsProtocolPrimaryText);
 }
 
 html {
@@ -11,7 +108,15 @@ html {
   @media screen and (max-width: 600px) {
     font-size: 55%;
   }
-  --bonadocsProtocolBackground: #0f151a;
+  --bonadocsProtocolBackground: #151b24;
   --bonadocsProtocolPrimaryText: #e2e7ef;
   --bonadocsProtocolSecondaryText: #7f97b4;
+  --bonadocsProtocolSecondaryBackground: #0f141b;
+  --bonadocsProtocolBorder: #20262e;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
 }
