--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -112,6 +112,12 @@
           border-radius: 0.8rem;
           padding: 1.6rem;
           border: 1px solid var(--bonadocsProtocolBorder);
+          cursor: pointer;
+          &:hover {
+            background-image: url("https://res.cloudinary.com/dfkuxnesz/image/upload/v1703355677/Gradient_xqretc.svg");
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
           &__icon {
             margin-right: 0.4rem;
           }
@@ -137,6 +143,18 @@
           }
         }
       }
+    }
+  }
+  &__overlay {
+    position: fixed;
+     height: 100vh;
+    background-color: antiquewhite;
+    bottom: 0;
+    right: 0;
+    width: 50%;
+    color: red;
+    @media screen and (max-height: 600px), screen and (max-width: 600px) {
+      min-height: 120rem;
     }
   }
 }
