feat: registry UI

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -113,6 +113,8 @@ html {
   --bonadocsProtocolSecondaryText: #7f97b4;
   --bonadocsProtocolSecondaryBackground: #0f141b;
   --bonadocsProtocolBorder: #20262e;
+  --bonadocsProtocolOverlay: #0F141B;
+  --bonadocsProtocolBlue: #416BFF;
 }
 
 input:focus,
