fix scroll issue

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -11,7 +11,7 @@
     height: auto;
   }
   @media screen and (min-height: 1200px), screen and (min-width: 1200px) {
-    height: 100vh;
+    height: auto;
   }
 
   &__sidebar {
