--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -74,6 +74,7 @@
         background-position: 1rem 1rem;
         padding: 1.2rem 0.8rem 1.2rem 4rem;
         background-repeat: no-repeat;
+        
         &::placeholder {
           color: var(--bonadocsProtocolSecondaryText);
         }
@@ -298,6 +299,9 @@
 
   /* I've used padding so you can see the edges of the elements. */
   padding: 1px;
+  @media screen and (max-width: 600px) {
+          width: 80%;
+        }
 }
 
 input {
@@ -320,5 +324,5 @@ input:focus {
 .bonadocs__form__button {
   /* Just a little styling to make it pretty */
   background: var(--bonadocsProtocolBlue);
-  padding: .8rem 1.2rem;
+  padding: 0.8rem 1.2rem;
 }
