--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -296,7 +296,7 @@
   display: flex;
   flex-direction: row;
   width: 50%;
-
+  
   /* I've used padding so you can see the edges of the elements. */
   padding: 1px;
   @media screen and (max-width: 600px) {
@@ -325,4 +325,5 @@ input:focus {
   /* Just a little styling to make it pretty */
   background: var(--bonadocsProtocolBlue);
   padding: 0.8rem 1.2rem;
+  cursor: pointer;
 }
