--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,7 +6,7 @@
   overflow-y: auto;
   
   @media screen and (max-height: 600px), screen and (max-width: 600px) {
-    min-height: 95rem;
+    // height: 95rem;
   }
   // @media screen and (max-height: 1200px), screen and (max-width: 1200px) {
   //   height: auto;
@@ -14,7 +14,7 @@
   // }
   @media screen and (min-width: 1200px) {
     height: auto;
-    min-height: 100vh;
+    // min-height: 100vh;
   }
 
   &__sidebar {
@@ -144,7 +144,7 @@
         gap: 1.6rem;
         grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
         height: min-content;
-        max-height: 70vh;
+        max-height: 68vh;
         overflow-y: auto;
         @media screen and (max-height: 600px), screen and (max-width: 600px) {
           // height: min-content;
